k8s/envelope-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envelope-api-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.ufukcetinkaya.net
    secretName: envelope-api-tls
  rules:
  - host: api.ufukcetinkaya.net
    http:
      paths:
      - path: /EFaturaMerkez/services/EFatura
        pathType: Prefix
        backend:
          service:
            name: envelope-api
            port:
              number: 80
